@@ -236,13 +236,14 @@ movieclip_new (SwfdecActionContext *context, SwfdecSpriteSegment *seg)
   struct mc_list_entry *listentry;
 
   mc = JS_NewObject (context->jscx, &movieclip_class, NULL, NULL);
-  JS_AddRoot (context->jscx, &mc);
-  JS_SetPrivate (context->jscx, mc, seg);
 
   listentry = g_malloc (sizeof (struct mc_list_entry));
   listentry->mc = mc;
   listentry->seg = seg;
   context->seglist = g_list_append (context->seglist, listentry);
+
+  JS_AddRoot (context->jscx, &listentry->mc);
+  JS_SetPrivate (context->jscx, mc, seg);
 
   return mc;
 }
